# Code_Quaternion-kinematics-for-the-error-state-Kalman-filter

./: .gitignore  README.md
chapter1/: Sec_1_3_2_product_purequaternion_test.m  Sec_1_3_2_product_purequaternion_test.m~  Sec_1_3_3_natural_power.m  Sec_1_3_4_exponential_test.m  conjugate_q.m  conjugate_test.m  naturalpower.m  product_q.m  product_test.m  sum_q.m  sum_test.m  test.m
chapter2/: sec_2_1.m  sec_2_3_4.m  untitled2.m~
chapter5_testing/: Integrate.m  app_temp_eskf.m  app_test_eskf.mlapp  app_test_eskf.prj  app_test_eskf_r2017b.mlapp  compare_result.m  generate_data.m  plot_generate_data.m  plot_integration.m  run_ekf.m  run_eskf.m  run_gendata.m  run_interate.m  visualize_ekf.m  visualize_eskf.m
chapter5_testing_server/: app_test_eskf.ctf
eigen_quat/: CMakeLists.txt  package.xml
eigen_quat/src/: basic_eigen_tools.cpp  basic_eigen_tools.h  quaternion_test.cpp  quaternion_test_chapters.cpp  quaternion_test_chapters.h  visualize_pose.cpp
